--- a/CSS/Login.css
+++ b/CSS/Login.css
@@ -1,7 +1,27 @@
-#wrapper{
+#header{
 	background-color:#00DDDD;
     width:100%;
-    height:100%;
+    height:10%;
+	text-align: center;
+    margin:0 auto;
+}
+
+#content{
+	background-color:#00DDDD;
+	background-image:url(background.jpg);
+	background-repeat:no-repeat;
+	background-position:center;
+    width:100%;
+    height:80%;
+	text-align: center;
+    margin:0 auto;
+}
+
+#bottom{
+	background-color:#00DDDD;
+    width:100%;
+    height:10%;
+	text-align: center;
     margin:0 auto;
 }
 
@@ -9,19 +29,10 @@
 	background-color:#FFFF00;
     width:300px;
     height:150px;
+	text-align: center;
     margin:0 auto;
 }
 
-#Login_ID_CSS{
-	background-color:#FFFF00;
-    margin:0 auto;
-}
-
-#Login_PWD_CSS{
-	background-color:#FFFF00;
-    margin:0 auto;	
-}
-
-#Login_Button{
-    margin:0 auto;
+#bottom{
+	
 }
