--- a/CSS/Login.css
+++ b/CSS/Login.css
@@ -26,13 +26,9 @@
 }
 
 #login{
-	background-color:#FFFF00;
+	background-color:rgba(255, 255, 0, 0.7);
     width:300px;
     height:150px;
 	text-align: center;
     margin:0 auto;
-}
-
-#bottom{
-	
 }
